# main_project

./: README.md  pyproject.toml
src/c/: crew.py  main.py
src/c/config/: agents.yaml  tasks.yaml
src/c/tools/: analyze_python_ast.py  dependency_tools.py  github_tools.py
